Fix facet content shift when font awesome icons are loaded

--- a/app/webpacker/src/stylesheets/discover/_facets.scss
+++ b/app/webpacker/src/stylesheets/discover/_facets.scss
@@ -203,7 +203,8 @@
 
       .icon {
         color: theme-color("gray-darker");
-        display: inline;
+        display: inline-block;
+        width: 1.25em;
       }
 
       .remove {
